# gh-autofollow

./: README.md  pyproject.toml
gh_autofollow/: __init__.py  __main__.py  config.py  core.py  logging_setup.py  security.py
gh_autofollow/api/: __init__.py  client.py
gh_autofollow/cli/: __init__.py
gh_autofollow/db/: __init__.py  database.py
gh_autofollow/scheduler/: __init__.py  runner.py
gh_autofollow/strategies/: __init__.py  discovery.py  filters.py
tests/: conftest.py  test_all.py  test_security.py
